--- a/css/styles.css
+++ b/css/styles.css
@@ -11,24 +11,42 @@ body {
 
 h1 {
     font-family: "Montserrat";
-    font-weight: bold;
+    font-weight: 900;
     font-size: 3rem;
     line-height: 1.5;
     color: #fff;
 }
 
-/* Styling for Classes----------------*/
+/* Navigation Bar ----------------*/
 
 .container-fluid {
     padding: 3% 15%;
+
 }
+
 .navbar-brand {
-    font-family: "Ubuntu";
+    font-family: Ubuntu;
     font-size: 2.5rem;
     font-weight: bold;
     
-    
 }
+.navbar {
+    padding: 0 0 4.5rem;
+}
+.nav-item {
+    padding: 0 18px;
+}
+.nav-link {
+    font-size: 1.2rem;
+    font-family: "Montserrat";
+}
+
+/* Download button */
+.Download-button {
+    margin: 5% 3% 5% 0;
+}
+
+
 
 .iPhone6 {
     -webkit-transform:rotate(30deg);
@@ -46,6 +64,8 @@ h1 {
     background-color: #ff4c68;
     color: #fff;
 }
+
+
 
 
 
