--- a/css/styles.css
+++ b/css/styles.css
@@ -16,10 +16,17 @@ h1 {
     color: #fff;
 }
 
+h2 {
+    font-family: "Montserrat";
+    font-size: 3rem;
+    line-height: 1.5;
+    font-weight: 900;
+}
+
 h3 {
     font-family: "Montserrat";
-    font-weight: 900;
-    font-size: 1.5rem;
+    font-weight: 600;
+    font-size: 1.3rem;
     text-align: center;
 }
 
@@ -80,12 +87,46 @@ p {
 
 /* Features section awesome ------------------*/
 
-.fas {
-    color: #ef8172;
-    font-size: 3.5rem;
-
+#features {
+    padding: 7% 15%;
 }
 
-.row {
-    padding: 0 50px;
+.fas {
+    color: #ef8172;
+    margin-bottom: 1rem;
+}
+
+.fas:hover {
+    color: #ff4c68
+}
+
+.feature-box {
+    text-align: center;
+    padding: 5%;
+}
+
+/* testimonials section------------ */
+
+#testimonials {
+    text-align: center;
+    padding: 7% 15%;
+    background: #ef8172;
+    color: #fff;
+}
+
+.testimonial-image {
+    width: 10%;
+    border-radius: 100%;
+    margin: 20px;
+}
+
+#press {
+    background: #ef8172;
+    text-align: center;
+    padding-bottom: 3%;
+}
+
+.press-logo {
+    width: 15%;
+    margin: 20px 20px 50px;
 }
